fixed radio button and details overlap

--- a/public/assets/css/mediaQueries.css
+++ b/public/assets/css/mediaQueries.css
@@ -1,4 +1,4 @@
-@media (max-width: 1050px) {
+@media (max-width: 1120px) {
 
 	.nav-bar--center {
 		display: none;
